--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+*.DS_STORE
+
 server/*.sqlite
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
