--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-*.DS_STORE
-
-server/*.sqlite
+db.sqlite
+.idea/
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
